# mp2_lab2_matrix_master_2

./: .gitignore  CMakeLists.txt
include/: utmatrix.h
samples/: sample_matrix.cpp
test/: test_tmatrix.cpp  test_tvector.cpp
